Background Image Cut Off Solved

--- a/html/css/builder.less
+++ b/html/css/builder.less
@@ -773,6 +773,9 @@ Version:        0.1.0
 				margin: 0.5em;
 				box-shadow: inset 0 0 2px lighten(@dash-grey, 10%);
 				border: 1px solid transparent;
+				.column {
+					background-size: contain;
+				}
 			}
 		}
 		&:last-child {
